--- a/report.tex
+++ b/report.tex
@@ -183,7 +183,7 @@ Si toutefois la position du haut parleur est fixée, la localisation se fera né
 
 \section{Patient assis}
 
-L'immobilité du patient permet non seulement d'utiliser de ne plus se contraindre à des sources sonores omnidirectionnelles mais permet également la création d'une illusion de continuité dans la positions des objets sonores en adaptant la Solution \ref{solSrcFixe}. En effet, il est standard en stéréo par exemple de virtuellement centrer un objet sonore en envoyant l'émission sonore de l'objet avec le même volume à gauche et à droite. On peut ainsi créer un segment continu virtuel entre deux hauts parleurs (voir Figure \ref{stereo-localization})
+L'immobilité du patient permet non seulement d'utiliser de ne plus se contraindre à des sources sonores omnidirectionnelles mais permet également la création d'une illusion de continuité dans la positions des objets sonores en adaptant la Solution \ref{solSrcFixe}. En effet, il est standard en stéréo par exemple de virtuellement centrer un objet sonore en envoyant l'émission sonore de l'objet avec le même volume à gauche et à droite. On peut ainsi créer un segment continu virtuel entre deux hauts parleurs (voir Figure \ref{stereo-localization}). On peut ainsi simuler le déplacement d'un objet sonore immatériel sur une surface en ajoutant un troisième haut-parleur.
 
 \begin{figure}[!h]
 	\centering
